Fix z-index on review form

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -84,6 +84,7 @@
     transform: translate(-50%, -50%);
     padding: 5%;
     background-color: rgba(230,207,139,0.95);
+    z-index: 3;
 }
 #close-review-form {
     position: absolute;
